All task completed

--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -9,7 +9,7 @@
   <body>
     <header></header>
     <footer>
-      <div>Holberton School</div>
+      Best School
     </footer>
   </body>
 </html>
