--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -1,39 +1,29 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>AirBnB clone</title>
-    <style>
-      header {
-      position:absolute;
-      left:0px;
-      right:0px;
-      top:0px;
-      background-color:#FF0000;
-      height:70px;
-      width:100%;
-      }
-
-      footer {
-      position:fixed;
-      bottom:0px;
-      background:#00FF00;
-      height:60px;
-      width:100%;
-      left: 0;
-      }
-
-      div {
-      box-sizing:border-box;
-      margin:20px auto;
-      text-align: center;
-      }
-    </style>
-
-  </head>
-  <body>
-    <header></header>
-    <footer>
-      <div>Holberton School</div>
-    </footer>
-  </body>
+<html lang="en">
+    <head>
+        <title>AirBnB Clone</title>
+        <style>
+            body {margin: 0; padding: 0;}
+            header{
+                Background-color:#FF0000;
+                height: 70px;
+                width:100%;
+            }
+            footer{
+                Background-color:#00FF00;
+                height:60px;
+                width:100%;
+                position: absolute;
+                bottom:0; text-align:center;
+                line-height:60px
+            }
+        </style>
+    </head>
+    <body>
+        <header>
+        </header>
+        <footer>
+            Best School
+        </footer>
+    </body>
 </html>
