--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>AirBnB clone</title>
-    <link rel="stylesheet" href="styles/3-common.css" type="text/css">
-    <link rel="stylesheet" href="styles/3-header.css" type="text/css">
-    <link rel="stylesheet" href="styles/3-footer.css" type="text/css">
-    <link rel="shortcut icon" type="image/x-icon" href="images/icon.png" />
-  </head>
-  <body>
-    <header></header>
-    <footer>Holberton School</footer>
-  </body>
+<html lang="en">
+    <head>
+        <title>AirBnB Clone</title>
+        <link rel="stylesheet" href="styles/3-common.css">
+        <link rel="stylesheet" href="styles/3-header.css">
+        <link rel="stylesheet" href="styles/3-footer.css">
+        <link rel="icon" href="images/icon.png">
+    </head>
+    <body>
+        <header>
+            <div class="logo">
+            </div>
+        </header>
+        <footer>
+            Best School
+        </footer>
+    </body>
 </html>
